--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
-APP_NAME=SPOTLAR :: Cupons de Desconto
+APP_NAME=Cupons de Desconto
 APP_HOST=0.0.0.0
 APP_PORT=5000
 APP_DEBUG=True
 BASE_URL=0.0.0.0    
 
 
-DATABASE_USER=postgres
-DATABASE_PW=q7963q
+DATABASE_USER=
+DATABASE_PW=
 DATABASE_NAME=SPOTLARDB
 DATABASE_HOST=db #db
 DATABASE_PORT=5432
 
 
-SECRET_KEY=FD2WYU5NLQylzfT
+SECRET_KEY=
 DURATION_TOKEN=120 # min
 OBJECTS_PER_PAGE=20
